--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Scr/style.css">
 </head>
 <body>
     <button class="toggle-theme" onclick="toggleTheme()">🌓 Tema</button>
@@ -40,6 +40,6 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="Scr/index.js"></script>
 </body>
 </html>
